# ATMEGA8A-Tutorial-Board-A

./: .prettierrc  README.md
documents/: blink.md
electrical-design/: #auto_saved_files#  .gitignore  PCB Edge.dxf  circuit.kicad_pcb  circuit.kicad_pro  circuit.kicad_sch  fp-lib-table  sym-lib-table
electrical-design/production/: circuit-B_Cu.gbr  circuit-B_Mask.gbr  circuit-B_Paste.gbr  circuit-B_Silkscreen.gbr  circuit-Edge_Cuts.gbr  circuit-F_Cu.gbr  circuit-F_Mask.gbr  circuit-F_Paste.gbr  circuit-F_Silkscreen.gbr  circuit-In1_Cu.gbr  circuit-In2_Cu.gbr  circuit-NPTH.drl  circuit-PTH.drl  circuit-job.gbrjob
mechanical-design/: A-00.step
software-design/: CMakeLists.txt  CMakePresets.json  Makefile  build.sh  main.cpp
software-design/cmake/: atmega-8a-device.cmake  avr-cross-compile-setup.cmake  avr-executable-setup.cmake  avr-gcc-toolchain.cmake  avr-toolchain-setup.cmake
software-design/include/: common.h
software-design/src/: 7_segment.cpp  adc.cpp  blink_async.cpp  blink_sync.cpp  common.cpp  floating_point.cpp  integer_arithmetic.cpp  main.cpp  timer.cpp
